tests/NormalTests/paczka1/fuzzy1/70093516.err
Error in line 5: JPumigi S658 207,5
Error in line 12: VQru4cUCQQq S658 54,1
Error in line 10: mF8Je S807 92,8
Error in line 33: mF8Je A294 94,4
